- Added STRCOPY Spin2 function
- Fixed a crash when trivial C programs are submitted
- Fixed swapping 64 bit variables
- Fixed failure to change arrays to pointers in some C expressions
- Fixed 64 bit integer preincrement
- Fixed initializing local reference variables
- Fixed += and similar operators when used with references
- Inline assembly can now access multiple longs of large local variables.
- More fixes to C struct initialization
- Made debug output and C library output work better together
- Made repeat loops in Spin2 finish with the same value as in PNut
- Optimized initializers of large local variables
- Optimized long fills on P2 with SETQ (thanks to Ada Gottensträter again!)
- Remove unused methods even at -O0 optimization
- Relax type checking in C for pointer/integer conversion

Version 5.9.19
- Added a warning for mixing tabs and spaces in Spin code
- Added strtok() function to C library
- Fixed some incorrect C array declarations
- Fixed precision not being reset in printf
- Fixed incorrect leaf function analysis in Spin functions using floats
- Fixed lut function bug that crept in when memory was reserved at start of LUT
- Fixed padding while initializing structures
- Implemented -E and -H flags for nu bytecode
- Implemented SPR[] in bytecode (thanks to Ada Gottensträter)
- Improved register allocation in leaf functions (thanks Ada)
- Improved optimization for small wait loops (also thanks to Ada)
- Made SPR[] work more like Spin1 (thanks Ada)
- Reduced register usage in local array initialization
- Reimplemented TYPEOF to be more useful

Version 5.9.18
- Fixed missing # on output of jint style inline asm instructions
- Fixed some bugs in the BASIC open wrapper (handling of close and recv were dodgy)
- Fixed use of function aliases in submodules
- Fixed an address calculation bug in bytecode
- Made some nucode code generation improvements
- Minor tweak to preprocessor to better handle files that do not end with a newline

Version 5.9.17